# FFInspector

./: .gitignore  README.md  ffinspector.example.yaml  prompt.md  pyproject.toml  requirements.txt
ffinspector/: __init__.py  analysis.py  arrsync.py  cli.py  config.py  discovery.py  models.py  nfo.py  probe.py  renderers.py  utils.py
tests/: test_analysis.py  test_arrsync.py  test_cli.py  test_config.py  test_nfo.py  test_renderers.py
