[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ffinspector"
version = "0.1.0"
description = "CLI video inspector for ffprobe/NFO auditing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rich>=14.3,<15"]

[project.scripts]
ffinspect = "ffinspector.cli:main"

[tool.setuptools.packages.find]
include = ["ffinspector*"]
